force-app/main/default/objects/BMCServiceDesk__Model__c/BMCServiceDesk__Model__c.object-meta.xml
<CustomObject>
    <description>Models are used to standardize the creation of configuration items (CIs) and assets and associated field values including model name and manufacturer.  Without model, users have no restrictions when entering key values including the model name and manufacturer.  This applies to imports too.  As a result, data is more likely to be inconsistent making it more difficult to locate key information and reducing the value of the data and analysis.</description>
    <label>Model</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>