force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <description>Stores details about the model</description>
    <inlineHelpText>Specify detailed information about the model.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>