force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__FKCMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the CMDB class on which the model is created</description>
    <inlineHelpText>Select the CMDB class for which you want to create a model.</inlineHelpText>
    <label>CMDB Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>Models</relationshipLabel>
    <relationshipName>Models</relationshipName>
    <type>Lookup</type>
</CustomField>