force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__FKModel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Normalized Model</label>
    <referenceTo>BMCServiceDesk__Model__c</referenceTo>
    <relationshipLabel>Master Models</relationshipLabel>
    <relationshipName>Master_Models</relationshipName>
    <type>Lookup</type>
</CustomField>