force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__Inactive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the model is active or inactive in CMDB</description>
    <inlineHelpText>Select this field if the model is no longer valid. Inactive models can no longer be applied to CMDB instances.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>