force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Manufacturer__c</fullName>
    <description>Stores the manufacturer name of the model</description>
    <inlineHelpText>Specify the manufacturer of the model. This value is automatically mapped to the Manufacturer Name attribute of the configuration item or asset.</inlineHelpText>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>