force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__Normalized_With_Model__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Normalized_With_Model__c</fullName>
    <formula>BMCServiceDesk__FKModel__r.Name</formula>
    <label>Normalized With Model</label>
    <type>Text</type>
</CustomField>