force-app/main/default/objects/BMCServiceDesk__Model__c/fields/BMCServiceDesk__Part_Number__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Part_Number__c</fullName>
    <inlineHelpText>Specify the model number, which is a unique identifier of the model.</inlineHelpText>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>