force-app/main/default/objects/BMCServiceDesk__Model__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Manufacturer__c</columns>
    <columns>BMCServiceDesk__CMDB_Class_Name__c</columns>
    <columns>BMCServiceDesk__Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>BMCServiceDesk__Normalized_With_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>